--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.17.0",
     "tsc": "^2.0.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.23",
+    "@types/pg": "^8.6.5",
     "@types/sequelize": "^4.28.11",
     "nodemon": "^2.0.15",
     "ts-node": "^10.7.0",
